<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/text_margin"
    android:background="#ffffff"
    tools:context=".SignInActivity">



    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome"
        android:textColor="@color/myTextColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/book_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loginanim" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="@dimen/text_margin"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/myBg"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/login"
                android:textColor="@color/myTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_btn"

                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:hint="@string/email"
                android:textColorHint="@color/myTextColor"
                app:endIconMode="clear_text"
                app:endIconTint="@color/myTextColor"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error"
                app:helperText="@string/required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/myTextColor"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/myTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_btn"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/myTextColor" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/myTextColor"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error"
                app:helperText="@string/required"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/myTextColor"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/myTextColor"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_btn"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:textColor="@color/myTextColor" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forgetPasswordBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:fontFamily="sans-serif-medium"
                android:text="@string/forget_password"
                android:textColor="@color/myTextColor"
                android:textSize="12sp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_btn"
                android:elevation="5dp"
                android:text="@string/login"
                android:textColor="#fff"
                android:textStyle="bold"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/signup_reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_marginEnd="5dp"
                android:background="#00000000"
                android:elevation="0dp"
                android:text="@string/new_user_sign_up"
                android:textColor="@color/myTextColor"
                android:textSize="12sp" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
